tests/ui/async-await/generator-wf-check.witness_wf.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generator-wf-check.rs:41:5
   |
LL | /     wf(async {
LL | |
LL | |         let witness: Option<Static<T>> = None;
LL | |         async {}.await;
LL | |         drop(witness);
LL | |     });
   | |______^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn test_witness_wf<T: 'static>() {
   |                     +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
